alineacion docs y sw
